image-border-overflow-solve

--- a/src/app/frontend/imagelist/imagelist.scss
+++ b/src/app/frontend/imagelist/imagelist.scss
@@ -192,3 +192,7 @@ md-card>md-card-header img {
         border-bottom: 1px solid #e1e5e8;
     }
 }
+
+.list-content {
+    height: 100%;
+}
